# icp-in-case-of-passing

./: .gitignore  CKBTC_TESTING_FEATURES.md  Cargo.toml  DEMO.md  DEPLOYMENT.md  FRONTEND_SETUP.md  GITHUB_PUSH_READY.md  ICP_UTILITIES.md  MAINNET_DEPLOYMENT.md  PRE_PUSH_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_DEMO.md  README.md  VERCEL_DEPLOYMENT.md  create-beneficiary-identity.sh  demo.sh  dfx.json  setup.sh  start-frontend.sh  vercel.json  workflow.md
deadman_switch/: Cargo.toml
deadman_switch/src/: lib.rs
examples/: usage.sh
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  TestPage.jsx  account-utils.js  canister.js  components.css  deadman_switch.did.js  icp-utils.js  index.css  internet_identity.did.js  main.jsx  oisy-wallet-utils.js  polyfills.js  wallet-assets.js  wallet.js
frontend/src/components/: AccountDashboard.jsx  AddressBalanceChecker.jsx  ErrorBoundary.jsx  HeartbeatButton.jsx  InfoModal.jsx  RegistrationForm.jsx  TimeoutCalendar.jsx  TransactionHistory.jsx
frontend/src/utils/: balanceUtils.js
