[package]
name = "deadman_switch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10.0"
icrc-ledger-types = "0.1.12"

